# Hunyuan-3D-v3

./: .gitignore  BATCH_WORKFLOW_GUIDE.md  LICENSE  README.md  SUBMIT_TO_MANAGER.md  __init__.py  batch_hunyuan3d.py  node_list_entry.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/: auto_batch_workflow.json  batch_image_to_3d_workflow.json  image_to_3d_ready.json  text_to_3d_ready.json
hunyuan_3d/: __init__.py  api_client.py  batch_nodes.py  file_manager.py  nodes.py  preview_nodes.py
models/: README.md
